# cpp-training-gol

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  main.cpp  out-w30-h30-s123-s10-c0-r10.approved.txt
cmake/: CMakeLists.txt  approvals.cmake  catch2.cmake  fmt.cmake  spdlog.cmake
src/: CMakeLists.txt  bar.cpp  bar_test.cpp  foo.cpp  foo_test.cpp  main.cpp
src/gol/: CMakeLists.txt  bar.cpp  bar.hpp  bar_test.cpp  foo.cpp  foo.hpp  foo_test.cpp  gol.cpp  gol.hpp  gol_test.cpp  gol_test.foo_snapshot_test_example,_converter.approved.txt  gol_test.foo_snapshot_test_example,_converter.received.txt  gol_test.foo_snapshot_test_example,_multiple_inputs.approved.txt  gol_test.foo_snapshot_test_example.approved.txt  gol_test.gol_grid_update.approved.txt  gol_test.update_grid_30x30.approved.txt  gol_test.update_grid_3x3,_3_iterations.approved.txt  gol_test.update_grid_5x5,_lines_of_three.approved.txt
